--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,9 +108,9 @@ services:
 
   luftdaten2mqtt:
     restart: unless-stopped
-    image: zeridon/luftdaten2mqtt
+    image: zeridon/luftdaten2mqtt:1.0.2
     build:
-      context: https://github.com/zeridon/airrohr-to-ha-mqtt.git
+      context: https://github.com/zeridon/airrohr-to-ha-mqtt.git#v1.0.2
     depends_on:
       - mqtt
     networks:
