Add one more shelly

--- a/homeassistant-config/entities/groups/shellies-firmware.yaml
+++ b/homeassistant-config/entities/groups/shellies-firmware.yaml
@@ -4,10 +4,10 @@ shellies_firmware:
   entities:
     #- binary_sensor.shelly_1_770ecc_firmware_update
     #- binary_sensor.shelly_1_7691cd_firmware_update
-    #- binary_sensor.shelly_1pm_ba0ab9_firmware_update
     - binary_sensor.shelly_1pm_ba5659_firmware_update
     - binary_sensor.shelly_1pm_BA0AB9_firmware_update
     - binary_sensor.shelly_1pm_40F520008838_firmware_update
+    - binary_sensor.shelly_1pm_40F520016B7E_firmware_update
     - binary_sensor.shelly_1pm_40F52001721B_firmware_update
     - binary_sensor.shelly_h_t_e00685_firmware_update
     #- binary_sensor.shelly_rgbw2_b0a85f_firmware_update
