log only to std

--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -9,10 +9,6 @@
 # Allow for future listeners not related to main one
 per_listener_settings true
 
-# track which client gets what message and in case of overlap of subscription
-# send only once. If true QOS=2 is mandatory everywhere or non-overlap
-allow_duplicate_messages false
-
 #############################################################################
 #
 # PROTOCOL / TROUGHPUT / PERFORMANCE
@@ -64,8 +60,8 @@ log_type warning
 log_type notice
 log_type information
 
-# Get me a file
-log_dest file /mosquitto/log/mosquitto.log
+# do not log to file ... we are in docker
+#log_dest file /mosquitto/log/mosquitto.log
 
 # and stdout
 log_dest stdout
