--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,9 +108,9 @@ services:
 
   luftdaten2mqtt:
     restart: unless-stopped
-    image: zeridon/luftdaten2mqtt:1.0.2
+    image: zeridon/luftdaten2mqtt:1.0.3
     build:
-      context: https://github.com/zeridon/airrohr-to-ha-mqtt.git#v1.0.2
+      context: https://github.com/zeridon/airrohr-to-ha-mqtt.git#v1.0.3
     depends_on:
       - mqtt
     networks:
@@ -121,6 +121,7 @@ services:
       - MQTT_HOST=mqtt
       - MQTT_USER=${MQTT_LUFTDATEN_USER:-user}
       - MQTT_PASS=${MQTT_LUFTDATEN_PASS:-pass}
+      - LOG_LEVEL=INFO
 
 ####  # mDNS/Bonjour/SSDP repeater
 ####  # based on https://github.com/alsmith/multicast-relay
