--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -235,7 +235,7 @@ services:
 
   # Cloudflare-Companion - Automatic CNAME DNS Creation
   cf-companion:
-    image: tiredofit/traefik-cloudflare-companion:latest
+    image: tiredofit/traefik-cloudflare-companion:6.4.0
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
