better comment mosquitto config

--- a/mosquitto/config/listeners-available/listen-1883.conf
+++ b/mosquitto/config/listeners-available/listen-1883.conf
@@ -1,11 +1,18 @@
 # Standard one
 listener 1883
+
+# run only on IPv4 (v6 is disabled for better security)
 socket_domain ipv4
 
 # client id required MQTT 3.1.1 and MQTT 5
 allow_zero_length_clientid false
 
 # authorizations
+# no anonymous users
 allow_anonymous false
+
+# password mapping
 password_file /mosquitto/config/passwordfiles/listener-1883.password
+
+# permissions per user
 acl_file /mosquitto/config/acls/listener-1883.acl
