--- a/homeassistant-config/automations/entities/washing_machine/washcycle-end.yaml
+++ b/homeassistant-config/automations/entities/washing_machine/washcycle-end.yaml
@@ -1,16 +1,17 @@
-- id: '9537e6d4-379e-4a75-8272-f08b0955a491'
-  alias: 'Wash Cycle - Completed'
-  description: 'Notify wash cycle is completed. Also consume a unit of detergent.'
-  trigger:
-  - platform: numeric_state
-    entity_id: sensor.shelly_1pm_40f520016b7e_power_0
-    below: '120'
-    for: 00:02:00
-  condition:
+---
+id: '9537e6d4-379e-4a75-8272-f08b0955a491'
+alias: 'Wash Cycle - END'
+description: 'Notify wash cycle is completed. Also consume a unit of detergent.'
+trigger:
+  platform: numeric_state
+  entity_id: sensor.shelly_1pm_40f520016b7e_power_0
+  below: '120'
+  for: 00:02:00
+condition:
   - condition: state
     entity_id: input_boolean.peralnia
     state: 'on'
-  action:
+action:
   - service: counter.decrement
     data: {}
     entity_id: counter.kapsuli_prane
@@ -23,4 +24,4 @@
   - service: input_boolean.turn_off
     data: {}
     entity_id: input_boolean.peralnia
-  mode: single
+mode: single
