--- a/homeassistant-config/automations/maintenance/shellies-update-firmware.yaml
+++ b/homeassistant-config/automations/maintenance/shellies-update-firmware.yaml
@@ -2,7 +2,7 @@
 id: 'update-shelly-firmware'
 alias: Update Shellies
 mode: single
-description: Update shellies firmware if/when available
+description: Update shellies firmware if/when available. Wait for 5 min and trigger the annoucer (twice)
 trigger:
   - platform: state
     entity_id: group.shellies_firmware
@@ -13,3 +13,13 @@ action:
     data:
       topic: shellies/command
       payload: update_fw
+  - delay: "00:05:00"
+  - service: mqtt.publish
+    data:
+      topic: shellies/command
+      payload: announce
+  - delay: "00:00:05"
+  - service: mqtt.publish
+    data:
+      topic: shellies/command
+      payload: announce
