--- a/homeassistant-config/integrations/history.yaml
+++ b/homeassistant-config/integrations/history.yaml
@@ -24,7 +24,7 @@ history:
       - sensor.*_rssi
       - sensor.*_uptime
       # generally useless on shellies with power metering
-      - sensor.shelly*_temperature
+      #- sensor.shelly*_temperature
       # so unreliable that they are almost useless
       - sensor.spalnia_*_energy_consumption
       - sensor.dnevna_*_energy_consumption
