reinstate old shelly 1pm instead 2.5 as it overheats

--- a/homeassistant-config/entities/groups/shellies-firmware.yaml
+++ b/homeassistant-config/entities/groups/shellies-firmware.yaml
@@ -7,10 +7,10 @@ shellies_firmware:
     - binary_sensor.shelly_1pm_ba5659_firmware_update
     - binary_sensor.shelly_1pm_BA0AB9_firmware_update
     - binary_sensor.shelly_1pm_40F520008838_firmware_update
-    # disable this one/shellyswitch25-694435/relay/1/
-    #- binary_sensor.shelly_1pm_40F520016B7E_firmware_update
-    # Washing machine/fridge
-    - binary_sensor.shelly_2_5_694435_firmware_update
+    # reenable the old shelly ...
+    - binary_sensor.shelly_1pm_40F520016B7E_firmware_update
+    # Washing machine/fridge overheats ...
+    #- binary_sensor.shelly_2_5_694435_firmware_update
     - binary_sensor.shelly_1pm_40F52001721B_firmware_update
     - binary_sensor.shelly_h_t_e00685_firmware_update
     - binary_sensor.shelly_h_t_e00557_firmware_update
