move cf-companion to new (base) env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -256,11 +256,12 @@ services:
     environment:
       # base container setup
       - TIMEZONE=$TZ
-      - COLORIZE_OUTPUT=FALSE
-      - ENABLE_CRON=FALSE
-      - ENABLE_LOGROTATE=FALSE
-      - ENABLE_SMTP=FALSE
-      - ENABLE_ZABBIX=FALSE
+      - CONTAINER_COLORIZE_OUTPUT=FALSE
+      - CONTAINER_ENABLE_SCHEDULING=FALSE
+      - CONTAINER_ENABLE_MESSAGING=FALSE
+      - CONTAINER_ENABLE_MONITORING=FALSE
+      - CONTAINER_ENABLE_LOGROTATE=FALSE
+      - CONTAINER_ENABLE_LOGSHIPPING=FALSE
       # companion setup
       # where to point the cname
       - TARGET_DOMAIN=$HA_DOMAIN
