--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,4 @@ repos:
     rev: v1.26.3
     hooks:
       - id: yamllint
+        exclude: homeassistant-config/(www/community|custom_components)
