--- a/homeassistant-config/integrations/switches.yaml
+++ b/homeassistant-config/integrations/switches.yaml
@@ -35,3 +35,12 @@ switch:
         turn_off:
           - service: vacuum.return_to_base
             entity_id: vacuum.robo_rooter
+
+      climate_bathroom_floor_on_off:
+        value_template: "{{ not is_state('climate.bathroom_floor', off) }}"
+        turn_on:
+          - service: climate.turn_on
+            entity_id: climate.bathroom_floor
+        turn_off:
+          - service: climate.turn_off
+            entity_id: climate.bathroom_floor
