--- a/homeassistant-config/custom_components/zha_toolkit/services.yaml
+++ b/homeassistant-config/custom_components/zha_toolkit/services.yaml
@@ -181,8 +181,18 @@ execute:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
+    csvout:
+      description: Filename of CSV to write read data to.  Written to 'csv' directory
+      example: '../web/mycsv.csv'
+      selector:
+        text:
+    csvlabel:
+      description: Label to use for read value (in CSV file)
+      example: SecretAttributeName
+      selector:
+        text:
 attr_read:
-  description: Write Attribute (ZHA-Toolkit)
+  description: Read Attribute (ZHA-Toolkit)
   fields:
     ieee:
       description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
@@ -256,6 +266,16 @@ attr_read:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
+    csvout:
+      description: Filename of CSV to write read data to.  Written to 'csv' directory
+      example: '../web/mycsv.csv'
+      selector:
+        text:
+    csvlabel:
+      description: Label to use for read value (in CSV file)
+      example: SecretAttributeName
+      selector:
+        text:
 attr_write:
   description: Write Attribute (ZHA-Toolkit)
   fields:
@@ -351,6 +371,171 @@ attr_write:
        description: "Force writing the attribute even if the read attribute already matches.  Defaults to False"
        selector:
          boolean:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
+    csvout:
+      description: Filename of CSV to write read data to.  Written to 'csv' directory
+      example: '../web/mycsv.csv'
+      selector:
+        text:
+    csvlabel:
+      description: Label to use for read value (in CSV file)
+      example: SecretAttributeName
+      selector:
+        text:
+backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
+  fields:
+    command_data:
+      description: Suffix for backup file
+      example: "_bathroom_added"
+      selector:
+        text:
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
+bind_ieee:
+  description: Bind clusters from ieee device to command_data device
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    command_data:
+      description: "Binding target\nEntity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    cluster:
+      description: target cluster (or all internally defined ones)
+      selector:
+        number:
+          min: 0
+          max: 0xFFFF
+    tries:
+      description: Number of times the zigbee packet should be attempted
+      selector:
+        number:
+          min: 0 
+          max: 255
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
+ezsp_backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
+  fields:
+    command_data:
+      description: Suffix for backup file
+      example: "_bathroom_added"
+      selector:
+        text:
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
+handle_join:
+  description: Handle join (ZHA should re-interrogate the device as on new join)
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    command_data:
+      description: Short network address of the device (optional, if known in ZHA)
+      selector:
+        number:
+          min: 1
+          max: 0xFFFF
+misc_reinitialize:
+  description: Reinitialize device
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+znp_backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
+  fields:
+    command_data:
+      description: Suffix for backup file
+      example: "_bathroom_added"
+      selector:
+        text:
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
     expect_reply:
        description: "Wait for/expect a reply (not used yet)"
        selector:
