--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,7 @@
   "extends": [ "config:base" ],
   "packageRules": [
     {
-      "matchManagers": [ "docker-compose" ],
+      "matchDatasources": [ "docker" ],
       "matchPackageNames": [ "homeassistant/home-assistant" ],
       "allowedVersions": "/^20[0-9]{2}\\.([1-9]|0[1-9]|1[012])\\.[1-9][0-9]?/"
     }
