expose not ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,7 +118,7 @@ services:
       - mqtt
     networks:
       - svcs
-    ports:
+    expose:
       - "8080"
     environment:
       - MQTT_HOST=mqtt
