--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,10 @@ services:
       # cf ip's to resolve clients
       - --entrypoints.web-sec.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22,192.168.99.0/24,192.168.166.0/24
       # certresolver ... attach to entrypoint
-      - --entrypoints.web-bad.http.tls.certresolver=dns-cloudflare
+      - --entrypoints.web-sec.http.tls.certresolver=dns-cloudflare
       # domain names for all
-      - --entrypoints.web-bad.http.tls.domains[0].main=$BASE_DOMAIN
-      - --entrypoints.web-bad.http.tls.domains[0].sans=*.$BASE_DOMAIN
+      - --entrypoints.web-sec.http.tls.domains[0].main=$BASE_DOMAIN
+      - --entrypoints.web-sec.http.tls.domains[0].sans=*.$BASE_DOMAIN
       # letsencrypt via cf
       # LetsEncrypt Staging Server - uncomment when testing
       #- --certificatesResolvers.dns-cloudflare.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
@@ -62,6 +62,7 @@ services:
       - "traefik.enable=true"
       # HTTP-to-HTTPS Redirect
       - "traefik.http.routers.http-catchall.entrypoints=web-bad"
+      - "traefik.http.routers.http-catchall.priority=1"
       - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
@@ -279,6 +280,21 @@ services:
       # Add hosts specified in rules here to force cf-companion to create the CNAMEs
       # Since cf-companion creates CNAMEs based on host rules, this a workaround for non-docker/external apps
       #- "traefik.http.routers.cf-companion-rtr.rule=Host(`portainer.$DOMAIN`) || `synglances.$DOMAIN`)"
+
+  otaserver:
+    image: nginx:1.21.6-alpine
+    restart: unless-stopped
+    networks:
+      - svcs
+    expose:
+      - "80"
+    volumes:
+      - "./otaserver:/usr/share/nginx/html:ro"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.otaserver-rtr.entrypoints=web-bad"
+      - "traefik.http.routers.otaserver-rtr.rule=Host(`ota.${BASE_DOMAIN}`)"
+      - "traefik.http.routers.otaserver-rtr.middlewares=internal-ips"
 
 ####  whoami:
 ####    # A container that exposes an API to show its IP address
