--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,8 @@ services:
       - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      # internal ip's middleware
+      - "traefik.http.middlewares.internal-ips.ipwhitelist.sourcerange=127.0.0.0/8,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
     networks:
       - svcs
       - socket_proxy
@@ -132,7 +134,6 @@ services:
       - "traefik.http.routers.luftdaten2mqtt-rtr.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.luftdaten2mqtt-rtr.service=luftdaten2mqtt-svc"
       - "traefik.http.routers.luftdaten2mqtt-rtr.middlewares=internal-ips"
-      - "traefik.http.middlewares.internal-ips.ipwhitelist.sourcerange=127.0.0.0/8,192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
       - "traefik.http.services.luftdaten2mqtt-svc.loadbalancer.server.port=8080"
 
   # mDNS/Bonjour/SSDP repeater
@@ -305,7 +306,8 @@ services:
       - "3000"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.tasmopiler-rtr.entrypoints=web-bad"
+      - "traefik.http.routers.tasmopiler-rtr.entrypoints=web-sec"
+      - "traefik.http.routers.tasmopiler-rtr.tls=true"
       - "traefik.http.routers.tasmopiler-rtr.rule=Host(`tasmopiler.${BASE_DOMAIN}`)"
       - "traefik.http.routers.tasmopiler-rtr.middlewares=internal-ips"
 
@@ -320,7 +322,8 @@ services:
       - "6052"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.esphome-rtr.entrypoints=web-bad"
+      - "traefik.http.routers.esphome-rtr.entrypoints=web-sec"
+      - "traefik.http.routers.esphome-rtr.tls=true"
       - "traefik.http.routers.esphome-rtr.rule=Host(`esphome.${BASE_DOMAIN}`)"
       - "traefik.http.routers.esphome-rtr.middlewares=internal-ips"
 
