--- a/homeassistant-config/custom_components/zha_toolkit/services.yaml
+++ b/homeassistant-config/custom_components/zha_toolkit/services.yaml
@@ -988,6 +988,86 @@ scan_device:
       description: Wait for/expect a reply (not used yet)
       selector:
         boolean:
+zcl_cmd:
+  description: Send cluster command
+  fields:
+    ieee:
+      description: >-
+        Entity name,\ndevice name, or\nIEEE address of the node to send\
+        command to
+      example: 00:0d:6f:00:05:7d:2d:34
+      required: true
+      selector:
+        entity:
+          integration: zha
+    manf:
+      description: Manufacturer id
+      selector:
+        number:
+          min: 1
+          max: 0xFFFF
+          mode: box
+    endpoint:
+      description: target endpoint
+      selector:
+        number:
+          min: 1
+          max: 255
+          mode: box
+    cluster:
+      description: target cluster
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 0xFFFF
+          mode: box
+    cmd_id:
+      description: Command Id to execute
+      required: true
+      selector:
+        number:
+          min: 0
+          max: 0xFF
+          mode: box
+    args:
+      description: Arguments for command when needed (as per zigpy's definition corresponding to Zigbee Library Cluster (ZCL) specification)
+      example: [1, "abcd", 3]
+      selector:
+        text:
+    tries:
+      description: Number of times the zigbee packet should be attempted
+      selector:
+        number:
+          min: 0
+          max: 255
+          mode: box
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: >-
+        Event name when the service call did all its work (either success
+        or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    fail_exception:
+      description: >-
+        Throw exception when success==False, useful to stop scripts, automations
+      selector:
+        boolean:
+    expect_reply:
+      description: Wait for/expect a reply (not used yet)
+      selector:
+        boolean:
 znp_backup:
   description: Backup coordinator data (znp, bellows/ezsp)
   fields:
