--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -277,6 +277,8 @@ services:
       - CF_TOKEN=$CLOUDFLARE_API_TOKEN
       - DOCKER_HOST=tcp://socket-proxy:2375
       - REFRESH_ENTRIES=TRUE
+      - CONTAINER_LOG_LEVEL=VERBOSE
+      - DEFAULT_TTL=120
     #labels:
       # Add hosts specified in rules here to force cf-companion to create the CNAMEs
       # Since cf-companion creates CNAMEs based on host rules, this a workaround for non-docker/external apps
