deprecate mqtt config in yaml ... WHY WHY WHY

--- a/homeassistant-config/integrations/mqtt.yaml
+++ b/homeassistant-config/integrations/mqtt.yaml
@@ -2,7 +2,7 @@
 # mqtt component for tracking whatnot
 # https://www.home-assistant.io/integrations/mqtt/
 mqtt:
-  broker: !secret mqtt_broker_host
+  #broker: !secret mqtt_broker_host
   client_id: homeassistant-server
-  username: !secret mqtt_broker_user
-  password: !secret mqtt_broker_pass
+  #username: !secret mqtt_broker_user
+  #password: !secret mqtt_broker_pass
