--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -8,3 +8,6 @@ ignore: |
   homeassistant-config/www/community
   homeassistant-config/custom_components
   homeassistant-config/blueprints/automation/homeassistant/notify_leaving_zone.yaml
+  homeassistant-config/blueprints/automation/homeassistant/motion_light.yaml
+  homeassistant-config/blueprints/automation/mdegat01/update_notifications.yaml
+  homeassistant-config/blueprints/script/homeassistant/confirmable_notification.yaml
